test_regress/t/t_inst_pin_realnreal.out
%Error-UNSUPPORTED: t/t_inst_pin_realnreal.v:51:32: Unsupported: Output port connection 'out' connects real to non-real
                                                  : ... In instance t.netlist
   51 |    pga_model pga0(.in, .gain, .out(pga_out));
      |                                ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
